--- a/app/src/main/res/values-large-land/layouts.xml
+++ b/app/src/main/res/values-large-land/layouts.xml
@@ -3,5 +3,5 @@
     <item name="main" type="layout">@layout/main_landscape</item>
     <bool name="big_screen">true</bool>
     <bool name="is_landscape">true</bool>
-    <string name="which_one">values-large-land</string>
+    <string name="which_one" translatable="false">values-large-land</string>
 </resources>
